crates/compiler/tests/parse_errors/list_pattern_open.elm
module Main exposing (..)

x = case 1 of
  [
